app/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-service-mesh-svc

spec:
  type: ClusterIP
  selector:
    app: app-service-mesh
  ports:
    - name: http
      port: 80
      targetPort: 3000
