app/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: app-service-mesh-route

spec:
  parentRefs:
  - name: app-service-mesh-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /healthz
    - path:
        type: Exact
        value: /readyz
    backendRefs:
    - name: app-service-mesh-svc
      port: 80
